# MonitorThing

./: .clang-format  .gitignore  CONFIGURE.ac  ChangeLog  Makefile.am  README  config.h  config.status  monitor_thing.1
src/: main.c  main.h
src/monitor/: monitor.c  monitor.h
src/utilities/sleep/: sleep.c  sleep.h
src/utilities/terminal/: terminal.c  terminal.h
src/utilities/types/: bool.h
